--- a/app/package.json
+++ b/app/package.json
@@ -18,8 +18,10 @@
     "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
     "express-logger": "0.0.3",
+    "express-session": "^1.11.3",
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
+    "session-mongoose": "^0.5.2",
     "swig": "^1.4.2"
   },
   "devDependencies": {}
