--- a/app/package.json
+++ b/app/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^4.1.3",
     "morgan": "^1.6.1",
     "session-mongoose": "^0.5.2",
-    "swig": "^1.4.2"
+    "swig": "^1.4.2",
+    "formidable":"^1.0.14"
   },
   "devDependencies": {}
 }
